kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  labels:
    name: my-ingress
spec:
  rules:
    - host: helloworld.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: backend-svc
                port:
                  number: 3000
